# loop_best_skill

./: .env.example  .gitignore  .mcp.json  .token-savior-cache.json  CLAUDE.md  LICENSE  README.md  config.example.yaml  config.full.example.yaml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
.serena/: project.yml
docs/superpowers/plans/: 2026-06-23-loopforge.md
docs/superpowers/specs/: 2026-06-23-loopforge-design.md
src/loopforge/: __init__.py  cli.py  config.py  context.py  env.py  graph.py  graph_app.py  logging.py  mcp_discovery.py  mcp_readonly.py  persistence.py  ratelimit.py  runner.py  state.py  websearch.py
src/loopforge/agents/: __init__.py  builder.py  prompts.py
src/loopforge/scoring/: __init__.py  composite.py  deterministic.py  rubric.py
tests/: test_agents.py  test_cli.py  test_composite.py  test_config.py  test_context.py  test_delay.py  test_deterministic.py  test_e2e.py  test_env.py  test_graph.py  test_logging.py  test_mcp_discovery.py  test_mcp_readonly.py  test_persistence.py  test_ratelimit.py  test_smoke.py  test_state.py  test_websearch.py
