[project]
name = "loopforge"
version = "0.1.0"
description = "Loop Engineer: multi-agent loop que gera SKILLs do Claude"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=1.0",
    "langgraph>=0.2",
    "langgraph-cli[inmem]>=0.1",
    "langgraph-checkpoint-sqlite>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "ddgs>=9.14.4",
]

[project.scripts]
loopforge = "loopforge.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "anyio>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loopforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
